--- a/style.css
+++ b/style.css
@@ -20,7 +20,44 @@ body
     border: 1px solid white;
 }
 
-#start, #status
+#start, #status, #restart
 {
     font-size: 22px;
+}
+
+canvas
+{
+    border: 3px solid white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px white;
+}
+
+h4
+{
+    background-color: white;
+    line-height: 2;
+    margin: 0px;
+}
+
+.modal-dialog
+{
+    width: 90%;
+}
+
+.modal-body
+{
+    text-align: left;
+    font-size: 20px;
+}
+
+.copy_right_footer
+{
+    position: fixed;
+    width: 100%;
+    color: grey;
+    line-height: 3;
+    text-align: center;
+    bottom: 0;
+    background-color: white;
+    margin-top: 100px;
 }
